# dask-sphinx-theme

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.rst  lighthouserc.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: lighthouse.yml  publish-pypi.yml
dask_sphinx_theme/: __init__.py  _version.py  layout.html  theme.conf  theme.toml
dask_sphinx_theme/_pygments/: style.py
dask_sphinx_theme/ext/: dask_config_sphinx_ext.py
dask_sphinx_theme/static/css/: explore.css  nbsphinx.css  style.css
dask_sphinx_theme/static/js/: custom.js
docs/: conf.py  demo.md  index.md  index.rst  requirements.txt
