[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Aligned with black https://github.com/psf/black/blob/main/.flake8
extend-ignore = E203, E266, E501
# Note: there cannot be spaces after commas here
exclude = __init__.py,versioneer.py
ignore =
    E4,         # Import formatting
    E731,       # Assigning lambda expression
    W503,       # line break before binary operator

per-file-ignores =
    **/tests/*:
        # local variable is assigned to but never used
        F841,
        # Ambiguous variable name
        E741,

max-line-length = 88

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = dask_sphinx_theme/_version.py
versionfile_build = dask_sphinx_theme/_version.py
tag_prefix =
parentdir_prefix = dask-sphinx-theme-

[options.entry_points]
pygments.styles =
    dask = dask_sphinx_theme._pygments.style:DaskStyle